--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,11 @@ group 'com.lapismc.minecraft'
 version '1.0.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.1.3-2'
+    ext {
+        kotlin_version = '1.1.3-2'
+        fuel_version   = '1.9.0'
+        kotson_version = '2.5.0'
+    }
 
     repositories {
         jcenter()
@@ -20,6 +24,9 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+    compile "com.github.kittinunf.fuel:fuel:$fuel_version"
+    compile "com.github.kittinunf.fuel:fuel-gson:$fuel_version"
+    compile "com.github.salomonbrys.kotson:kotson:$kotson_version"
 }
 
 compileKotlin {
