--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         kotlin_version = '1.1.3-2'
         fuel_version   = '1.9.0'
         kotson_version = '2.5.0'
+        dokka_version  = '0.9.15'
     }
 
     repositories {
@@ -13,10 +14,12 @@ buildscript {
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.dokka:dokka-gradle-plugin:$dokka_version"
     }
 }
 
 apply plugin: 'kotlin'
+apply plugin: 'org.jetbrains.dokka'
 
 repositories {
     jcenter()
