Store compiled jar file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,3 +36,7 @@ jobs:
       - run:
           name: Test
           command: ./gradlew check
+
+      - store_artifacts:
+          path: build/libs
+          destination: libs/
