--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,13 @@
 group 'com.lapismc.minecraft'
-version '1.0.0-SNAPSHOT'
+version '1.0.0'
 
 buildscript {
     ext {
-        kotlin_version = '1.1.3-2'
-        fuel_version   = '1.9.0'
-        kotson_version = '2.5.0'
-        dokka_version  = '0.9.15'
+        kotlin_version  = '1.1.3-2'
+        fuel_version    = '1.9.0'
+        kotson_version  = '2.5.0'
+        dokka_version   = '0.9.15'
+        bintray_version = '1.7.3'
     }
 
     repositories {
@@ -15,11 +16,13 @@ buildscript {
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.dokka:dokka-gradle-plugin:$dokka_version"
+        classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:$bintray_version"
     }
 }
 
 apply plugin: 'kotlin'
 apply plugin: 'org.jetbrains.dokka'
+apply plugin: 'com.jfrog.bintray'
 
 repositories {
     jcenter()
@@ -37,4 +40,18 @@ compileKotlin {
 }
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
+}
+
+bintray {
+    user = project.hasProperty('bintrayUser')   ? project.property('bintrayUser')   : System.getenv('BINTRAY_USER')
+    key  = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
+    configurations = ['archives']
+    pkg {
+        userOrg    = 'lapis-mc'
+        repo       = 'minecraft'
+        name       = 'minecraft-versioning'
+        githubRepo = 'lapis-mc/minecraft-versioning'
+        vcsUrl     = 'https://github.com/lapis-mc/minecraft-versioning.git'
+        licenses   = ['MIT']
+    }
 }
