--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,17 @@
 version: 2
+
+defaults: &defaults
+  docker:
+    - image: circleci/openjdk:8-jdk
+  working_directory: ~/minecraft-versioning
+
+  environment:
+    JVM_OPTS: -Xmx3200m
+    TERM: dumb
+
 jobs:
   build:
-    docker:
-      - image: circleci/openjdk:8-jdk
-    working_directory: ~/minecraft-versioning
-
-    environment:
-      JVM_OPTS: -Xmx3200m
-      TERM: dumb
-
+    <<: *defaults
     steps:
       - checkout
 
@@ -40,3 +43,31 @@ jobs:
       - store_artifacts:
           path: build/libs
           destination: libs/
+
+      - persist_to_workspace:
+          root: build
+
+  deploy:
+    <<: *defaults
+    steps:
+      - checkout
+      - attach_workspace:
+          at: build
+      - run:
+          name: Upload
+          command: ./gradlew bintrayUpload
+    branches:
+      only:
+        - master
+
+workflows:
+  version: 2
+  build-test-and-deploy:
+    jobs:
+      - build
+      - deploy:
+          filters:
+            branches:
+              only: master
+          requires:
+            - build
