--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,6 @@ defaults: &defaults
   docker:
     - image: circleci/openjdk:8-jdk
   working_directory: ~/minecraft-versioning
-
   environment:
     JVM_OPTS: -Xmx3200m
     TERM: dumb
@@ -36,18 +35,27 @@ jobs:
       - run:
           name: Compile
           command: ./gradlew assemble
-      - run:
-          name: Test
-          command: ./gradlew check
-
       - store_artifacts:
           path: build/libs
           destination: libs/
-
       - persist_to_workspace:
           root: ~/minecraft-versioning
           paths:
             - build
+
+  test:
+    <<: *defaults
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+          - v1-dependencies-{{ checksum "build.gradle" }}
+          - v1-dependencies-
+      - attach_workspace:
+          at: ~/minecraft-versioning
+      - run:
+          name: Test
+          command: ./gradlew check
 
   deploy:
     <<: *defaults
@@ -68,9 +76,12 @@ workflows:
   build-test-and-deploy:
     jobs:
       - build
+      - test:
+          requires:
+            - build
       - deploy:
+          requires:
+            - test
           filters:
             branches:
               only: master
-          requires:
-            - build
