--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ buildscript {
 apply plugin: 'kotlin'
 apply plugin: 'org.jetbrains.dokka'
 apply plugin: 'com.jfrog.bintray'
+apply plugin: 'maven-publish'
 
 repositories {
     jcenter()
@@ -42,10 +43,18 @@ compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
 
+publishing {
+    publications {
+        MinecraftVersioning(MavenPublication) {
+            from components.java
+        }
+    }
+}
+
 bintray {
     user = project.hasProperty('bintrayUser')   ? project.property('bintrayUser')   : System.getenv('BINTRAY_USER')
     key  = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
-    configurations = ['archives']
+    publications = ['MinecraftVersioning']
     pkg {
         userOrg    = 'lapis-mc'
         repo       = 'minecraft'
