--- a/build.gradle
+++ b/build.gradle
@@ -65,3 +65,13 @@ bintray {
         publish    = true
     }
 }
+
+publishing.publications.all {
+    pom.withXml {
+        asNode().dependencies.'*'.findAll() {
+            it.scope.text() == 'runtime' && project.configurations.compile.allDependencies.find { dep ->
+                dep.name == it.artifactId.text()
+            }
+        }.each { it.scope*.value = 'compile'}
+    }
+}
